blog-infra/infra/comments-depl-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: kishorbundhe1/comments:latest
          ports:
            - containerPort: 4001

---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
