blog-infra/infra/event-bus-depl-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
  labels:
    app: event-bus
spec:
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: kishorbundhe1/event-bus:latest
          ports:
            - containerPort: 4005

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
