blog-infra/infra/moderation-depl-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
  labels:
    app: moderation
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: kishorbundhe1/moderation:latest
          ports:
            - containerPort: 4003

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
