blog-infra/infra/posts-depl-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  labels:
    app: posts
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kishorbundhe1/posts:latest
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
