blog-infra/infra/query-depl-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: kishorbundhe1/query:latest
          ports:
            - containerPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
